crates/ark/src/lsp/snapshots/ark__lsp__folding_range__tests__folding_mixed.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n# First section ----\nfunction() {\n  #region nested region\n  a\n  #endregion\n}\n\n## Subsection ----\n# %% Cell in subsection\nb\n\n# Another section ----\nc\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 11,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 2,
        start_character: Some(
            12,
        ),
        end_line: 5,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 3,
        start_character: None,
        end_line: 5,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 8,
        start_character: None,
        end_line: 11,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 9,
        start_character: None,
        end_line: 11,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 12,
        start_character: None,
        end_line: 13,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
