crates/ark/src/lsp/snapshots/ark__lsp__folding_range__tests__folding_with_empty_lines.snap
---
source: crates/ark/src/lsp/folding_range.rs
expression: "test_folding_range(\"\n# Section with empty lines ----\nline1\n\nline2\n\n\nline3\n\n# Another section ----\ncontent\")"
---
[
    FoldingRange {
        start_line: 1,
        start_character: None,
        end_line: 7,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
    FoldingRange {
        start_line: 9,
        start_character: None,
        end_line: 9,
        end_character: None,
        kind: Some(
            Region,
        ),
        collapsed_text: None,
    },
]
